# Attestation-Client-Samples

./: CMakeLists.txt  CMakePresets.json  EnrollAik.ps1  NoAuth.ps1  README.md  report_boot.jwt  vcpkg.json
Microsoft.Attestation.Client/: .signature.p7s
Microsoft.Attestation.Client/inc/: _att_cfg.h  att_logger_exports.h  att_manager.h  att_manager_api.h  att_manager_api_enclave.h  att_manager_api_tpm.h  att_manager_defines.h  att_manager_logger.h  att_result.h
Microsoft.Attestation.Client/lib/: AzureAttest.lib  AzureAttestNormal.lib  azure-attest-manager.lib
attestation/: CMakeLists.txt  attest.cpp  attest.h  noauth_boot_att.cpp  precomp.h  report_boot.jwt  sample_boot_att.cpp  sample_enclave_att.cpp  sample_key_guard_key_att.cpp  sample_tpm_key_att.cpp  sample_vbs_att.cpp  sample_vbs_ncrypt_att.cpp  sample_vbs_ncrypt_key_att.cpp  sample_vbs_protected_key_att.cpp  utils.cpp  utils.h
cmake-modules/: AzureVcpkg.cmake
cmake-modules/overlay-ports/azure-security-attestation-cpp/: portfile.cmake  vcpkg.json
enclave/: CMakeLists.txt  enclave.c  precomp.h  sample_enclave.cpp  vbsenclave.def
